# soloist

./: Cargo.toml  README.md
benches/: Cargo.toml
benches/benches/: biv_batch_kzg.rs  ipa.rs
circom-compat/src/: lib.rs
de_network/: Cargo.toml
de_network/src/: channel.rs  lib.rs  multi.rs  two.rs
ipa/: Cargo.toml
ipa/src/: helper.rs  ipa.rs  ipa_from_laurent.rs  lib.rs  r1cs.rs
ipa/tests/: mod.rs  random_r1cs.rs
kzg/: Cargo.toml  run_local.sh
kzg/examples/: de_biv_batch_kzg.rs  de_biv_batch_kzg_same_point.rs
kzg/src/: biv_batch_kzg.rs  biv_trivial_kzg.rs  helper.rs  lib.rs  transcript.rs  uni_batch_kzg.rs  uni_trivial_kzg.rs
r1cs-distributify/: Cargo.toml
r1cs-distributify/src/: lib.rs
snark/: Cargo.toml  run_local.sh
snark/examples/: README.md  snark_circom.rs  snark_circom_non_dp.rs  snark_nopre.rs  snark_pre.rs
snark/examples/circuits/: ecdsa_verify.wtns.xz  rollup.r1cs.xz
snark/src/: gadgets_and_tests.rs  indexer.rs  lib.rs  prover_nopre.rs  prover_pre.rs  serialize.rs  snark_linear.rs  snark_log.rs
