[package]
name = "my_snark"
version = "0.4.0"
edition = "2018"

[dependencies]
ark-ec = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4.2", features = [ "derive" ] }
ark-relations = { version = "0.4.0", default-features = false}
digest = "0.10.7"
num-traits = "0.2"
itertools = "0.13.0"
rayon = { version = "1", optional = true }
merlin = "3.0.0"
my_kzg = { path = "../kzg" }
my_ipa = { path = "../ipa" }
de_network = { version = "0.1.0", path = "../de_network"}
structopt = "0.3"
ark-r1cs-std = { version = "0.4", default-features = false, optional = true }
ark-crypto-primitives = { version = "^0.3.0", default-features = true }
ark-ff = { version = "0.4", default-features = false, features = [ "asm" ], optional = true}

bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
ark-bls12-381 = { version = "0.4.0-alpha.2", features = [ "curve", "asm" ] }
ark-ed-on-bls12-381 = { version = "0.4.0-alpha.2", features = ["r1cs"] }
ark-bn254 = { version = "0.4.0", features = [ "curve", "asm" ] }
circom-compat = { path = "../circom-compat" }
r1cs-distributify = { path = "../r1cs-distributify" }

ark-relations = { version = "0.4", default-features = false }
blake2 = "0.10.6"

csv = "1"

[features]
default = [ "parallel", "r1cs", "asm"]
parallel = [ "rayon", "ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-relations/parallel"]
print-trace = [ "ark-std/print-trace" ]
r1cs = ["ark-r1cs-std", "ark-crypto-primitives/r1cs" ]
asm = ["ark-ff"]
